# SyntropyLog

./: .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.js  .npmrc  .prettierrc.json  ADAPTERS.md  ANALISIS_LOG_ACTUAL_VS_SYN TROPYLOG.md  AUDITORIA_TECNICA.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETED.txt  COMPLETED_TODAY.txt  CONTRIBUTING.md  DX_AND_VISION copy.md  DX_AND_VISION.md  LICENSE  NOTICE  README.draft.md  README.md  RELEASE_0.12.3.md  RELEASE_0.12.4.md  RELEASE_0.12.5.md  ROADMAP.md  SECURITY.md  TODO.md  codecov.yml  debug-masking.js  declarations.d.ts  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  run-example.sh  script.sh  sonar-project.properties  (+11 more)
.changeset/: README.md  audit-fixes-and-release-docs.md  declarative-masking-pii-fix.md  fix-masking-log-delay.md  fix-security-alerts.md  floppy-berries-mix.md  fuzzy-sites-repeat.md  readme-restructure-and-description.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
addon-artifacts/: index.d.ts  index.js  syntropylog_native.darwin-arm64.node  syntropylog_native.linux-x64-gnu.node  syntropylog_native.win32-x64-msvc.node
benchmark/: .gitignore  bench_output.txt  output.txt  (+16 more)
syntropylog-native/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  index.mjs  package.json  test-node.mjs  test-state.mjs
syntropylog-native/scripts/: patch-index-no-shell.js
syntropylog-native/src/: lib.rs
syntropylog-native/tests/: mask-parity-cases.json
(+404 files in other folders)
