[package]
name = "syntropylog-native"
version = "0.1.0"
edition = "2021"
description = "Native Rust addon for SyntropyLog"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1.19"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
